# python-zaragoza.github.io

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  makefile  pyproject.toml  rxconfig.py
.environment/: flake.nix  makefile  shell-env.sh
.github/workflows/: pages.yml
.makefiles/: development.mk  printing.mk
pyzgz/: events_page.py  main.py  talks_page.py
scripts/: fetch_meetup.py
src/pyzgz_site/: about_page.py  blog_page.py  comunity_page.py  contact_page.py  events_page.py  index_page.py  layout.py  pyzgz_site.py  talks_page.py
tests/: conftest.py
